# book-processing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.web  PROMPT.md  README.md  WEB_SERVING_SKILL.md  pyproject.toml
.github/workflows/: publish-web-image.yml
prompts/: podcast_section_system.j2  podcast_section_user.j2  simple_summary_system.j2  simple_summary_user.j2  tts_chunk_system.j2  tts_chunk_user.j2  visual_chunk_system.j2  visual_chunk_user.j2  visual_outline_system.j2  visual_outline_user.j2
scripts/: copy-output-to-onedrive.ps1  deploy-web.ps1
src/book_processing/: __init__.py  audio_transcriber.py  auth.py  blob_server.py  config.py  content_understanding.py  html_visualizer.py  llm_processor.py  main.py  metadata.py  pdf_converter.py  prompt_templates.py  site_generator.py  ssml_builder.py  tts_processor.py
tests/: test_audio_transcriber.py  test_blob_server.py  test_config.py  test_content_understanding.py  test_html_visualizer.py  test_llm_processor.py  test_pdf_converter.py  test_prompt_templates.py  test_site_generator.py  test_ssml_builder.py  test_tts_processor.py
