[project]
name = "book-processing"
version = "0.1.0"
description = "PDF to audio book processing pipeline with Azure OpenAI and Text-to-Speech"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]",
    "openai",
    "azure-identity",
    "httpx",
]

[project.scripts]
book-processing = "book_processing.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
