[project]
name = "book-processing"
version = "0.1.0"
description = "PDF to audio book processing pipeline with Azure OpenAI and Text-to-Speech"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "azure-identity",
    "httpx",
    "imageio-ffmpeg>=0.6.0",
    "jinja2",
    "mutagen",
    "python-dotenv",
    "pymupdf>=1.27.2",
    "markitdown>=0.1.5",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.138.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
book-processing = "book_processing.main:main"
book-processing-site = "book_processing.site_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
